# arm-preprocessing

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/templates/: PULL_REQUEST.md
.github/workflows/: test.yml
arm_preprocessing/: dataset.py  discretisation.py  squashing.py  timeseries.py
datasets/: README.md  measures2.txt  nursery.csv  sportydatagen.csv
docs/: conf.py  index.rst  requirements.txt
docs/arm_preprocessing/: dataset.rst  discretisation.rst  index.rst  squashing.rst
docs/dev/: installation.rst  testing.rst
docs/user/: usage.rst
examples/: equal_frequency_discretisation.py  equal_width_discretisation.py  load_dataset_csv.py  load_dataset_json.py  load_dataset_timeseries.py  time-series.py
examples/data_loading/: load_dataset_csv.py  load_dataset_tcx.py  load_dataset_timeseries.py
examples/discretisation/: equal_frequency_discretisation.py  equal_width_discretisation.py  kmeans_discretisation.py
examples/feature_selection/: feature_selection.py
examples/missing_values/: data.csv  missing_values_columns.py  missing_values_impute.py  missing_values_rows.py
examples/niaarm/: niaarm_integration.py
examples/scaling/: normalisation.py  standardisation.py
examples/squashing/: squash_cosine.py  squash_euclidean.py
tests/: test_arm_preprocessing.py  test_dataset.py  test_discretisation.py  test_squashing.py
