[tool.poetry]
name = "arm-preprocessing"
version = "0.2.5"
description = "Implementation of several preprocessing techniques for Association Rule Mining (ARM)"
authors = ["Tadej Lahovnik <tadej.lahovnik1@um.si>", "Iztok Fister Jr. <iztok@iztok-jr-fister.eu>"]
keywords = ['association rule mining', 'data science', 'preprocessing']
homepage = "https://github.com/firefly-cpp/arm-preprocessing"
repository = "https://github.com/firefly-cpp/arm-preprocessing"
documentation = "http://arm-preprocessing.readthedocs.io"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = ">=2.1.1,<3.0.0"
scikit-learn = "^1.3.2"
niaarm = "^0.4.1"
sport-activities-features = "^0.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"
Sphinx = {version = "^5.0", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-bibtex"]
sport-activities-features = ["sport-activities-features"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
